[tool.poetry]
name = "hpj-tg-bot"
version = "1.0.0"
description = "Head pain journal through telegram bot"
authors = ["NoOneWillSeeIt <rest338@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
python-telegram-bot = {extras = ["job-queue"], version = "^20.5"}
jinja2 = "^3.1.2"
aiosqlite = "^0.19.0"
fastapi = "^0.109.2"
sqlalchemy = "^2.0.27"
pydantic-settings = "^2.2.1"
uvicorn = {extras = ["standard"], version = "^0.27.1"}
pyjwt = {extras = ["crypto"], version = "^2.8.0"}
python-multipart = "^0.0.9"
redis = "^5.0.2"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
