[tool.poetry]
name = "hpj-tg-bot"
version = "1.0.0"
description = "Head pain journal through telegram bot"
authors = ["NoOneWillSeeIt <rest338@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
python-telegram-bot = "^21.0.1"
jinja2 = "^3.1.2"
aiosqlite = "^0.19.0"
fastapi = "^0.109.2"
sqlalchemy = "^2.0.27"
pydantic-settings = "^2.2.1"
uvicorn = {extras = ["standard"], version = "^0.27.1"}
pyjwt = {extras = ["crypto"], version = "^2.8.0"}
python-multipart = "^0.0.9"
redis = "^5.0.2"
typer = "^0.9.0"
httpx = "^0.27.0"


[tool.poetry.group.dev.dependencies]
types-redis = "^4.6.0.20240409"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
